feat: implement types, switch compiler to tsup and configure project for npm

--- a/biome.json
+++ b/biome.json
@@ -5,7 +5,7 @@
 	},
 	"linter": {
 		"enabled": true,
-		"ignore": ["/build"],
+		"ignore": ["/dist"],
 		"rules": {
 			"recommended": true,
 			"complexity": {
