--- a/package.json
+++ b/package.json
@@ -1,17 +1,29 @@
 {
   "name": "pit-scraper",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "A tool to scrape and track Formula 1 race results from formula1.com",
+  "author": "Arvyx Ramos (https://github.com/Arvicss)",
+  "license": "MIT",
+  "repository": {
+    "url": "https://github.com/Arvicss/pit-scraper"
+  },
+  "main": "./dist/index.js",
+  "module": "./dist/index.mjs",
+  "types": "./dist/index.d.ts",
+  "keywords": [
+    "formula1",
+    "formula",
+    "f1",
+    "scraper"
+  ],
   "scripts": {
-    "build": "tsc",
+    "build": "tsup",
     "check": "tsc --noEmit",
     "test": "jest --config .jestrc.json --runInBand",
     "dev": "tsx",
     "format": "biome format --write",
     "lint": "biome lint"
   },
-  "author": "Arvyx Ramos (https://github.com/Arvicss)",
-  "license": "MIT",
   "dependencies": {
     "axios": "^1.7.9",
     "cheerio": "^1.0.0",
@@ -29,6 +41,7 @@
     "babel-jest": "^29.7.0",
     "jest": "^29.7.0",
     "ts-jest": "^29.2.5",
+    "tsup": "^8.3.5",
     "tsx": "^4.19.2",
     "typescript": "^5.6.2"
   }
