--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,16 @@
 {
 	"extends": "@tsconfig/node22/tsconfig.json",
 	"compilerOptions": {
-		"outDir": "build",
-		"allowJs": true,
+		"strict": true,
+		"noImplicitAny": true,
+		"esModuleInterop": true,
+		"strictNullChecks": true,
+		"target": "ES2022",
+		"moduleResolution": "Node",
+		"module": "CommonJS",
+		"declaration": true,
+		"isolatedModules": true,
+		"outDir": "dist",
 		"sourceMap": true,
 		"paths": {
 			"@/*": [
